app/assets/stylesheets/modules/_styles.scss
.space {margin:0px 0px 50px 0px;}
.arrow-up {
  width: 0; 
  height: 0; 
  border-left: 5px solid transparent;
  border-right: 5px solid transparent;
  border-bottom: 5px solid black;
}


body {
  height: 100%;
  font-size: 13px;
  line-height: 1.7em;
  background-color:#dddddd;
  width: 100%;
}

body, h1, h2, h3, #super-list, .element, .tagline, #index-list, 
.super-list .link {
  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", sans-serif;
}

p {
  font-size: 0.9em;  
  margin-bottom: 1.0em; 
  font-family: "HelveticaNeue", sans-serif; 
  line-height:1.4em; 
  color:#666666;
}

a, a code, a img {
  text-decoration: none;
  border:none;
}

img {display:block;}
.right {float:right;}
.left {float:left;}
.center {margin:0px auto;}

#filter {margin:0px auto; max-width: 1200px;}

.main-wrap {
  background-color:black;
  padding-top:20px;
  h2 {
    color:white;
    font-size:2em;
    margin:10px auto 30px;
    text-align: center;
    font-weight: thin;
  }

}

.home-page {
  // margin: 30px auto 20px;
  h2 {
    font-size:1.2em;
    font-weight:bold;
    line-height: 1.2em;
    margin-bottom: 0.25em;
    position:relative;
  }

  p {
    color:black;
  }

  .symbol {
    padding-top: 5px;
    text-align: center;
  }

  .divide-right {
    border-right:1px solid #bcbcbc;
    padding: 38px 5px 25px;
    p {padding-right:10px;}
    @media only screen and (max-width: $topBarBreakPoint) {
        padding: 20px 15px 20px;
    }
    @media only screen and (max-width: 768px) {
        padding: 20px 15px 0px;
    }
  }

  .divide-left {
    border-left:1px solid #efefef;
    padding: 48px 0px;
    @media only screen and (max-width: $topBarBreakPoint) {
        padding: 20px 15px 30px;
    }
  }


  h3 {
    font-size:1.8em;
    line-height: 1em;
  }

  [class^="icon-"],
  [class*=" icon-"] {
    font-size:4.5em;
    @media only screen and (max-width: $topBarBreakPoint) {
        display:none;
    }
  }

  a {
    background:black;
    color: white;
    font-size: 1.2em;
    padding: 5px 18px;
    margin-top: 5px;
    display: inline-block;
    text-decoration: none;

    border-radius:20px;
    transition: all 0.3s ease;
      &:hover {
        opacity: 0.5;
      }

    [class^="icon-"],
    [class*=" icon-"] {
      font-size:1.5em;
      position:relative;
      top:2px;
      font-weight: bold;
      margin: 0px 0px 5px 14px;
    }
  }
}

@media only screen and (max-width: $topBarBreakPoint) {
  .home-page {
    h2 {
      font-size:2em;
      font-weight:bold;
      line-height: 1em;
      margin-bottom: 0.4em;
    }
    h3 {
      margin-bottom: 0.4em;
    }
    p {
      font-size: 1em;
    }
  }
}

@mixin deal {
  margin: 2.5px;
  float: left;
  overflow: hidden;
  position: relative;
  color: #222;
  display: block;
    a {
      color:black;
      &:hover {color:black;}
      &:visited {color:black;}
    }
    .content {
      padding:0px 15px;
      background-color:white;
      position:absolute;
      z-index: 2;
        h3 {font-size: 1.3em; line-height:1.1em; margin:10px 0px 5px;}
        .merchant {margin-top:15px; font-size:0.8em;}
        .desc {
          height:100px;
          overflow: hidden;
        }

    }
    .menu {
      width:100%;
      height:30px;
      border-top:1px solid $light_gray;
      position:absolute;
      background-color:white;
      z-index: 3;
      bottom:0;
      .currency {
        div {float:left;}
          .old-price {
            color: $medium_gray;
            background-color:$light_gray;
            width: 70px!important;
            height: inherit;
            font-weight: bold;
            padding:14px 0px 15px 15px;
            font-size: 0.85em;
            text-decoration: line-through;
            line-height: 0px;
              p {line-height:0;}
          }
          .price {
            font-weight: bold;
            padding:3px 0px 0px 10px;
            font-size: 1.15em;
          }
      }
      .promotion-icons { 
        float:right;
        [class^="icon-"],
        [class*=" icon-"] {
          color:$medium-gray;
        }
          ul { height:30px; margin:0px; padding:0px;
            li {
              border-left:1px solid $light_gray;
              float:left;
              height: 100%;
                a { height:100%; width:100%; display:block;
                  &:hover {
                    background-color:$red;
                      [class*="icon-"] {
                        color:darken($red, 20%);
                      }
                  }
                }
            }
          }
          .icon-2x {
            margin:5px 10px 0px;
          }
      }
    }
}

.local { 
  width: 235px;
  height: 380px;
  background-color:white;
    // img {width:235px; height:215px;}
    .image {position:relative; z-index:0; overflow:hidden; height:215px; }
    a {overflow:hidden;}
    @include deal;
}

.affiliate { 
  width: 235px;
  height: 187px;
  margin:0px 0px 5px 0px!important;
    .logo { img { width:auto; height:20px; display:block; position:absolute; bottom:0; padding:0px 0px 4px 5px;}}
    // img {width:235px; height:158px;}
    .image {position:relative; z-index:0; overflow:hidden; height:158px; }
    @include deal;
}

.blogpost { 
  width: 235px;
  height: 380px;
  background-color: white;
  @include deal;
    .image {position:relative; z-index:0; overflow:hidden; height:302.5px; }
    // > img { 
    //   width:235px; 
    //   height:302.5px;
    //   position:relative;
    //   z-index: -1;
    // }
    h3 {
      font-size: 1.3em; 
      line-height:1.1em; 
      margin:10px;
    }

    .details {
      position:absolute;
      height: auto;
      z-index: 1;
      bottom:0;
      width:100%;
      .author {
        padding:0px;
        background-color:white;
        background-color:black;
        height: 50px;
          .icon-2x {font-size:2em; margin-top:10px;}
          a {color:white; margin:2px 15px 0px 0px;}
          h4 {
            color:white;
            font-weight: bold;
            padding-top: 5px;
          }
          p {
            color:white;
            font-size:0.7em;
          }
          img {
            height:50px; 
            width:50px; 
            display:block; 
            background-color:white;   
            float: left;      
            margin-right:10px;  
          }
      }
    }
}

@media only screen and (max-width: 480px) {
  .local {width:100%; img {width:100%;}}
  .large {width:100%!important;}
  .bg-clear {width:45%; display:inline-block; float:left; position:relative; img {width:100%;}}
  .blogpost {width:45%; display:inline-block; float:left; position:relative; img {width:100%;}}
}

.bg-clear {background:none!important;}
.large {
  width: 475px; 
  height:380px;
    .desc {
      height:100px;
      overflow: hidden;
    }
    // img {
    //   width: 475px; 
    //   height:215px;
    // }
}

#options {
  padding-bottom: 1.0em;
    h3 { margin-bottom: 0.2em; font-size: 15px; }
    h4 { font-weight: bold; } 
    ul { margin: 0; list-style: none; ul { margin-left: 1.5em;}}
    li { float: left; margin-bottom: 0.2em;
      &:first-child a { border-radius: 7px 0 0 7px; border-left: none;}
      &:last-child a { border-radius: 0 7px 7px 0;}
      a {
        border-left:  1px solid hsla( 0, 0%, 100%, 0.3 );
        border-right: 1px solid hsla( 0, 0%,   0%, 0.2 );
        display: block;
        padding: 0.4em 0.5em;
        background-color: #DDD;
        color: #222;
        font-weight: bold;
        text-shadow: 0 1px hsla( 0, 0%, 100%, 0.5 );
        background-image: -webkit-linear-gradient( top, hsla( 0, 0%, 100%, 0.5 ), hsla( 0, 0%, 100%, 0.0 ) );
        background-image:    -moz-linear-gradient( top, hsla( 0, 0%, 100%, 0.5 ), hsla( 0, 0%, 100%, 0.0 ) );
        background-image:     -ms-linear-gradient( top, hsla( 0, 0%, 100%, 0.5 ), hsla( 0, 0%, 100%, 0.0 ) );
        background-image:      -o-linear-gradient( top, hsla( 0, 0%, 100%, 0.5 ), hsla( 0, 0%, 100%, 0.0 ) );
        background-image:         linear-gradient( top, hsla( 0, 0%, 100%, 0.5 ), hsla( 0, 0%, 100%, 0.0 ) );
        &:hover {background-color: #5BF;}
        &:active { background-color: #39D; box-shadow: inset 0 2px 8px hsla( 0, 0%, 0%, 0.6 );}
      }}
    .option-combo {
      display: inline-block;
      float: left;
      margin-right: 10px;
        ul { margin-right: 20px; display: inline-block;}
        h2, h4 { line-height: 34px; margin-bottom: 0; margin-right: 5px; display: inline-block;vertical-align: top;}
    }
}

#options li a.selected { background-color: #13F; text-shadow: none; color: white;}

.demos #content {height: 100%;}

/* The Magnificent Clearfix: nicolasgallagher.com/micro-clearfix-hack/ */
.clearfix:before, .clearfix:after { content: ""; display: table; }
.clearfix:after { clear: both; }
.clearfix { zoom: 1; }

@media all and (max-width: 479px) {
  #filter {margin:0px auto; max-width: 100%!important;}
}


article {
  padding:0px 0px 0px 30px;

  div {
    h2 {
      font-size:1.2em;
      font-weight: bold;
    }
    h3 {
      font-size:1.2em;
      font-weight: bold;
    }
  }
}

